# mortgage-iq

./: .gitignore  README.md  asset-manifest.json  index.html  pyproject.toml  render.yaml  requirements.txt  start.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  constants.py  entrypoint.sh  main.py  requirements.txt  scheduler.py  start.py
backend/model/: features.pkl  rate_model.pkl  scaler.pkl  train_model.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: mortgageApi.js
frontend/src/components/: Header.css  Header.jsx  MortgageForm.css  MortgageForm.jsx  RenewalForm.css  RenewalForm.jsx  RenewalPanel.css  RenewalPanel.jsx  ResultPanel.css  ResultPanel.jsx
frontend/src/components/charts/: AmortizationChart.jsx  ChartTooltip.jsx  CostBreakdownChart.jsx  ScheduleTable.jsx  chartConfig.js
frontend/src/components/ui/: ApprovalGauge.jsx  RatioCard.jsx  StatCard.jsx
static/css/: main.283c1200.css  main.283c1200.css.map  main.b6a0aca8.css  main.b6a0aca8.css.map  main.ee65cc86.css  main.ee65cc86.css.map  main.f6661869.css  main.f6661869.css.map
static/js/: main.15270be8.js  main.15270be8.js.map  main.3949edf6.js  main.3949edf6.js.map  main.3ccb5f32.js  main.3ccb5f32.js.map  main.5856b918.js  main.5856b918.js.map  main.60c035fb.js  main.60c035fb.js.map  main.83c9a628.js  main.83c9a628.js.map  main.f56b8e9c.js  main.f56b8e9c.js.map  main.f8eccba9.js  main.f8eccba9.js.map
